<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/x8dp"
    android:padding="@dimen/x8dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/permissions_required"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/x16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x8dp"
        android:layout_marginBottom="@dimen/x8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/permissions_required_desc"
        android:textColor="@color/cerqel_color_text"
        android:textSize="@dimen/x14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/x14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvCancel"
        app:layout_constraintEnd_toStartOf="@id/tvCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCancel" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/x14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvOk"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />
</androidx.constraintlayout.widget.ConstraintLayout>