<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/filterTitle"
        style="@style/tsReg16ColorMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x16dp"
        android:layout_marginVertical="@dimen/x24dp"
        android:lineHeight="@dimen/x24sp"
        android:text="@string/sort_by"
        android:textColor="@color/text_color_black"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toStartOf="@id/ivClose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/x24dp"
        android:layout_height="@dimen/x24dp"
        android:layout_marginHorizontal="@dimen/x16dp"
        android:src="@drawable/icon_close_filter"
        app:layout_constraintBottom_toTopOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filterTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTitle" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgFiltersLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/x24dp"
                android:layout_marginVertical="@dimen/x16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/checkBoxesLayoutLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/x24dp"
                android:layout_marginVertical="@dimen/x16dp"
                android:orientation="vertical"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:id="@+id/buttonsDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/x18dp"
                    android:background="@color/divider" />

                <Button
                    android:id="@+id/btnReset"
                    style="@style/secondaryButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x24dp"
                    android:layout_weight="1"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/btnLApplyFilter"
                    style="@style/primartButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x16dp"
                    android:layout_marginEnd="@dimen/x24dp"
                    android:layout_weight="1"
                    android:text="@string/apply_filter" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
